Update SwaggerUI - Change Token expiration to 10 minutes
